Entity model package added correctly